--- a/all-pages.html
+++ b/all-pages.html
@@ -120,49 +120,61 @@
 				<div class="page-item" data-status="done">
 					<div class="page-title">Страница 1</div>
 					<a href="description.html">
-						<img src="temp-previews-img/9_opisanie-marshryta.jpg" alt="opisanie-marshryta" />
+						<img src="temp-previews-img/9_opisanie-marshryta.jpg" width="640" height="1300" alt="opisanie-marshryta" />
 					</a>
 				</div>
 				<div class="page-item" data-status="done">
 					<div class="page-title">Страница 2</div>
 					<a href="place.html">
-						<img src="temp-previews-img/10_stranica-mesta.jpg" alt="stranica-mesta" />
+						<img src="temp-previews-img/10_stranica-mesta.jpg" width="640" height="1040" alt="stranica-mesta" />
 					</a>
 				</div>
 				<div class="page-item" data-status="done">
 					<div class="page-title">Страница 3</div>
 					<a href="routes.html">
-						<img src="temp-previews-img/11_spisok-marshrutov.jpg" alt="spisok-marshrutov" />
+						<img src="temp-previews-img/11_spisok-marshrutov.jpg" width="640" height="513" alt="spisok-marshrutov" />
 					</a>
 				</div>
 				<div class="page-item" data-status="done">
 					<div class="page-title">Страница 4 (Создание маршрута)</div>
 					<a href="route-create.html">
-						<img src="temp-previews-img/8.jpg" alt="Страница с картой" />
+						<img src="temp-previews-img/8.jpg" width="640" height="401" alt="Страница с картой" />
 					</a>
 				</div>
 				<div class="page-item" data-status="done">
 					<div class="page-title">Страница 5 (Готовый маршрут)</div>
 					<a href="route-ready.html">
-						<img src="temp-previews-img/2_map-main.jpg" alt="Страница с картой" />
+						<img src="temp-previews-img/2_map-main.jpg" width="640" height="401" alt="Страница с картой" />
 					</a>
 				</div>
 				<div class="page-item" data-status="done">
 					<div class="page-title">Страница 6 (Редактирование маршрута)</div>
 					<a href="route-edit.html">
-						<img src="temp-previews-img/6_route-edit.jpg" width="1920" height="1202" alt="Страница с картой" />
+						<img src="temp-previews-img/6_route-edit.jpg" width="640" height="401" alt="Страница с картой" />
 					</a>
 				</div>
 				<div class="page-item" data-status="continue">
 					<div class="page-title">Страница 7 (Личный кабинет)</div>
 					<a href="office.html">
-						<img src="temp-previews-img/1_office.jpg" width="1329" height="1772" alt="Страница с картой" />
+						<img src="temp-previews-img/1_office.jpg" width="640" height="853" alt="Личный кабинет" />
+					</a>
+				</div>
+				<div class="page-item" data-status="">
+					<div class="page-title">Личный кабинет (маршруты)</div>
+					<a href="#">
+						<img src="temp-previews-img/3_office-routes.jpg" width="640" height="853" alt="Личный кабинет (Маршруты)" />
+					</a>
+				</div>
+				<div class="page-item" data-status="">
+					<div class="page-title">Главная</div>
+					<a href="#">
+						<img src="temp-previews-img/homepage.jpg" width="800" height="451" alt="Главная" />
 					</a>
 				</div>
 				<div class="page-item" data-status="continue">
 					<div class="page-title">Страница c попапами</div>
-					<a href="office.html">
-						<img src="temp-previews-img/popups.jpg" width="1124" height="769" alt="Страница с картой" />
+					<a href="popups.html">
+						<img src="temp-previews-img/popups.jpg" width="1124" height="769" alt="Попапы" />
 					</a>
 				</div>
 			</div>
