--- a/description.html
+++ b/description.html
@@ -43,6 +43,16 @@
 						</div>
 						<span class="user-name">Oktav Sagal</span>
 					</a>
+					<div class="user-drop">
+						<ul class="user-list">
+							<li><a href="#"><i class="icon-earth-sm-white"></i><span class="text-inner">Мои маршруты</span></a></li>
+							<li><a href="#"><i class="icon-road-sm-white"></i><span class="text-inner">Мои места</span></a></li>
+							<li><a href="#"><i class="icon-user-sm-white"></i><span class="text-inner">Мои друзья</span></a></li>
+							<li><a href="#"><i class="icon-map-sm-white"></i><span class="text-inner">Моя карта</span></a></li>
+							<li><a href="#"><i class="icon-blog-sm-white"></i><span class="text-inner">Мой блог</span></a></li>
+							<li><a href="#"><i class="icon-profile-sm-white"></i><span class="text-inner">Мой профиль</span></a></li>
+						</ul>
+					</div>
 				</div>
 				<!--user end-->
 				<!--languages-->
