--- a/all-pages.html
+++ b/all-pages.html
@@ -120,49 +120,55 @@
 				<div class="page-item" data-status="done">
 					<div class="page-title">Страница 1</div>
 					<a href="description.html">
-						<img src="temp-previews-img/9_opisanie-marshryta.jpg" width="640" height="1300" alt="opisanie-marshryta" />
+						<img src="temp-previews-img/description.jpg" width="640" height="1300" alt="opisanie-marshryta" />
 					</a>
 				</div>
 				<div class="page-item" data-status="done">
 					<div class="page-title">Страница 2</div>
 					<a href="place.html">
-						<img src="temp-previews-img/10_stranica-mesta.jpg" width="640" height="1040" alt="stranica-mesta" />
+						<img src="temp-previews-img/place.jpg" width="640" height="1040" alt="stranica-mesta" />
 					</a>
 				</div>
 				<div class="page-item" data-status="done">
 					<div class="page-title">Страница 3</div>
 					<a href="routes.html">
-						<img src="temp-previews-img/11_spisok-marshrutov.jpg" width="640" height="513" alt="spisok-marshrutov" />
+						<img src="temp-previews-img/routes-list.jpg" width="640" height="513" alt="spisok-marshrutov" />
 					</a>
 				</div>
 				<div class="page-item" data-status="done">
 					<div class="page-title">Страница 4 (Создание маршрута)</div>
 					<a href="route-create.html">
-						<img src="temp-previews-img/8.jpg" width="640" height="401" alt="Страница с картой" />
+						<img src="temp-previews-img/route-create.jpg" width="640" height="401" alt="Страница с картой" />
 					</a>
 				</div>
 				<div class="page-item" data-status="done">
 					<div class="page-title">Страница 5 (Готовый маршрут)</div>
 					<a href="route-ready.html">
-						<img src="temp-previews-img/2_map-main.jpg" width="640" height="401" alt="Страница с картой" />
+						<img src="temp-previews-img/route-ready.jpg" width="640" height="401" alt="Страница с картой" />
 					</a>
 				</div>
 				<div class="page-item" data-status="done">
 					<div class="page-title">Страница 6 (Редактирование маршрута)</div>
 					<a href="route-edit.html">
-						<img src="temp-previews-img/6_route-edit.jpg" width="640" height="401" alt="Страница с картой" />
+						<img src="temp-previews-img/route-edit.jpg" width="640" height="401" alt="Страница с картой" />
 					</a>
 				</div>
 				<div class="page-item" data-status="continue">
-					<div class="page-title">Страница 7 (Личный кабинет)</div>
-					<a href="office.html">
-						<img src="temp-previews-img/1_office.jpg" width="640" height="853" alt="Личный кабинет" />
+					<div class="page-title">Личный кабинет. Блог</div>
+					<a href="office-blog.html">
+						<img src="temp-previews-img/office-blog.jpg" width="640" height="853" alt="Личный кабинет. Блог" />
+					</a>
+				</div>
+				<div class="page-item" data-status="continue">
+					<div class="page-title">Личный кабинет. Блог (Развернуто)</div>
+					<a href="office-blog.html">
+						<img src="temp-previews-img/office-blog(expanded).jpg" width="640" height="1311" alt="Личный кабинет. Блог (Развернуто)" />
 					</a>
 				</div>
 				<div class="page-item" data-status="">
 					<div class="page-title">Личный кабинет (маршруты)</div>
 					<a href="#">
-						<img src="temp-previews-img/3_office-routes.jpg" width="640" height="853" alt="Личный кабинет (Маршруты)" />
+						<img src="temp-previews-img/office-routes.jpg" width="640" height="853" alt="Личный кабинет (Маршруты)" />
 					</a>
 				</div>
 				<div class="page-item" data-status="">
