--- a/all-pages.html
+++ b/all-pages.html
@@ -118,37 +118,37 @@
 			<h1>Guide</h1>
 			<div class="all-pages">
 				<div class="page-item" data-status="done">
-					<div class="page-title">Страница 1</div>
+					<div class="page-title">Описание маршрута</div>
 					<a href="description.html">
 						<img src="temp-previews-img/description.jpg" width="640" height="1300" alt="opisanie-marshryta" />
 					</a>
 				</div>
 				<div class="page-item" data-status="done">
-					<div class="page-title">Страница 2</div>
+					<div class="page-title">Страница места</div>
 					<a href="place.html">
 						<img src="temp-previews-img/place.jpg" width="640" height="1040" alt="stranica-mesta" />
 					</a>
 				</div>
 				<div class="page-item" data-status="done">
-					<div class="page-title">Страница 3</div>
+					<div class="page-title">Список маршрутов</div>
 					<a href="routes.html">
 						<img src="temp-previews-img/routes-list.jpg" width="640" height="513" alt="spisok-marshrutov" />
 					</a>
 				</div>
 				<div class="page-item" data-status="done">
-					<div class="page-title">Страница 4 (Создание маршрута)</div>
+					<div class="page-title">Создание маршрута</div>
 					<a href="route-create.html">
 						<img src="temp-previews-img/route-create.jpg" width="640" height="401" alt="Страница с картой" />
 					</a>
 				</div>
 				<div class="page-item" data-status="done">
-					<div class="page-title">Страница 5 (Готовый маршрут)</div>
+					<div class="page-title">Готовый маршрут</div>
 					<a href="route-ready.html">
 						<img src="temp-previews-img/route-ready.jpg" width="640" height="401" alt="Страница с картой" />
 					</a>
 				</div>
 				<div class="page-item" data-status="done">
-					<div class="page-title">Страница 6 (Редактирование маршрута)</div>
+					<div class="page-title">Редактирование маршрута</div>
 					<a href="route-edit.html">
 						<img src="temp-previews-img/route-edit.jpg" width="640" height="401" alt="Страница с картой" />
 					</a>
@@ -166,7 +166,7 @@
 					</a>
 				</div>
 				<div class="page-item" data-status="">
-					<div class="page-title">Личный кабинет (маршруты)</div>
+					<div class="page-title">Личный кабинет. Маршруты</div>
 					<a href="#">
 						<img src="temp-previews-img/office-routes.jpg" width="640" height="853" alt="Личный кабинет (Маршруты)" />
 					</a>
