--- a/all-pages.html
+++ b/all-pages.html
@@ -153,21 +153,21 @@
 						<img src="temp-previews-img/route-edit.jpg" width="640" height="401" alt="Страница с картой" />
 					</a>
 				</div>
-				<div class="page-item" data-status="continue">
+				<div class="page-item" data-status="done">
 					<div class="page-title">Личный кабинет. Блог</div>
 					<a href="office-blog.html">
 						<img src="temp-previews-img/office-blog.jpg" width="640" height="853" alt="Личный кабинет. Блог" />
 					</a>
 				</div>
-				<div class="page-item" data-status="continue">
+				<div class="page-item" data-status="done">
 					<div class="page-title">Личный кабинет. Блог (Развернуто)</div>
-					<a href="office-blog.html">
+					<a href="office-blog(expanded).html">
 						<img src="temp-previews-img/office-blog(expanded).jpg" width="640" height="1311" alt="Личный кабинет. Блог (Развернуто)" />
 					</a>
 				</div>
-				<div class="page-item" data-status="">
+				<div class="page-item" data-status="done">
 					<div class="page-title">Личный кабинет. Маршруты</div>
-					<a href="#">
+					<a href="office-routes.html">
 						<img src="temp-previews-img/office-routes.jpg" width="640" height="853" alt="Личный кабинет (Маршруты)" />
 					</a>
 				</div>
@@ -177,7 +177,7 @@
 						<img src="temp-previews-img/homepage.jpg" width="800" height="451" alt="Главная" />
 					</a>
 				</div>
-				<div class="page-item" data-status="continue">
+				<div class="page-item" data-status="done">
 					<div class="page-title">Страница c попапами</div>
 					<a href="popups.html">
 						<img src="temp-previews-img/popups.jpg" width="1124" height="769" alt="Попапы" />
