--- a/all-pages.html
+++ b/all-pages.html
@@ -171,7 +171,7 @@
 						<img src="temp-previews-img/office-routes.jpg" width="640" height="853" alt="Личный кабинет (Маршруты)" />
 					</a>
 				</div>
-				<div class="page-item" data-status="">
+				<div class="page-item" data-status="done">
 					<div class="page-title">Главная</div>
 					<a href="#">
 						<img src="temp-previews-img/homepage.jpg" width="800" height="451" alt="Главная" />
