--- a/all-pages.html
+++ b/all-pages.html
@@ -173,7 +173,7 @@
 				</div>
 				<div class="page-item" data-status="done">
 					<div class="page-title">Главная</div>
-					<a href="#">
+					<a href="homepage.html">
 						<img src="temp-previews-img/homepage.jpg" width="800" height="451" alt="Главная" />
 					</a>
 				</div>
