--- a/all-pages.html
+++ b/all-pages.html
@@ -154,6 +154,12 @@
 					</a>
 				</div>
 				<div class="page-item" data-status="done">
+					<div class="page-title">Личный кабинет</div>
+					<a href="office.html">
+						<img src="temp-previews-img/office.jpg" width="640" height="853" alt="Личный кабинет (Маршруты)" />
+					</a>
+				</div>
+				<div class="page-item" data-status="done">
 					<div class="page-title">Личный кабинет. Блог</div>
 					<a href="office-blog.html">
 						<img src="temp-previews-img/office-blog.jpg" width="640" height="853" alt="Личный кабинет. Блог" />
